# beril-model

./: .cruft.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  mkdocs.yml  project.Makefile  pyproject.toml
.github/workflows/: deploy-docs.yaml  main.yaml
data_harmonizer/: menu.json
examples/: PersonCollection-minimal-plus.yaml  README.md
examples/output/: NamedThingCollection-material-entities.tsv  NamedThingCollection-material_entities-minimal.json  NamedThingCollection-material_entities-minimal.ttl  NamedThingCollection-material_entities-minimal.yaml  NamedThingCollection-material_entities-multiple-materials.json  NamedThingCollection-material_entities-multiple-materials.tsv  NamedThingCollection-material_entities-multiple-materials.ttl  NamedThingCollection-material_entities-multiple-materials.yaml  NamedThingCollection-min-mixed-coll.db  NamedThingCollection-min-mixed-coll.json  NamedThingCollection-min-mixed-coll.ttl  NamedThingCollection-min-mixed-coll_normalized.report.yaml  NamedThingCollection-min-mixed-coll_normalized.yaml  NamedThingCollection-processes-with-io.json  NamedThingCollection-processes-with-io.ttl  NamedThingCollection-processes-with-io.yaml  NamedThingCollection-processes.tsv  Person-minimal.json  Person-minimal.ttl  Person-minimal.yaml  PersonCollection-minimal-plus.json  PersonCollection-minimal-plus.ttl  PersonCollection-minimal-plus.yaml  README.md
old_workflows/: deploy-docs.yaml
project/excel/: beril_model.xlsx
project/graphql/: beril_model.graphql
tests/: __init__.py  test_valid_collections.py
(+36 files in other folders)
