[tool.poetry]
name = "beril_model"
version = "0.1.0"
description = "A proposed LinkML schema for proposed for sample interoperability in the Department of Energy's Biological and Environmental Research program"
authors = ["My Name <my-name@my-org.org>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/beril_model/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
gen-pop-linkml2sheets = "^0.1.8"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
check-jsonschema = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
dh-json2linkml = 'src.beril_model.datamodel.dh_json2linkml:update_json'
linkml-json2dh = 'src.beril_model.datamodel.linkml_json2dh:extract_lists'
